samples/_failures_safe/1761595301_1f9850_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a596d68a.c: In function ‘main’:
./samples/SAFE/__tmp_a596d68a.c:155:15: error: expected ‘;’ at end of input
  155 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_a596d68a.c:155:9: error: expected declaration or statement at end of input
  155 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_a596d68a.c:155:9: error: expected declaration or statement at end of input
